Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Object var)
    end
end
